[package]
name = "rusted_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rusted_open = { git = "https://github.com/Varrxion/rusted_open", branch = "main" }
glfw = "0.58"
bytemuck = "1.19.0"
nalgebra = "0.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.20.1"